# XPLAINSIM

./: .gitignore  README.md  demo_msmarco_attr.ipynb  demo_own_attr.ipynb  pyproject.toml  setup.py  test.py
xplain/attribution/: __init__.py  hooks.py  model.py  postprocessing.py  util.py  utils.py
xplain/attribution/msmarco_experiments/: compute_ms_marco_attr.py  demo_msmarco.ipynb  eval_ms_marco_attr.ipynb  msmarco_utils.py
xplain/spaceshaping/: __init__.py  losses_and_evaluators.py  model.py  util.py
xplain/symbolic/: __init__.py  model.py  parser_install.py
xplain/use_case_notebooks/: walk_through_examples_xplainsim.ipynb  walk_through_examples_xplainsim_DEMO_VIDEO_notebook.ipynb
