[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xplainsim"
version = "0.9"
description = "A Python package for explaining text similarity"
authors = [
  { name = "Juri Opitz" },
  { name = "Andrianos Michail" },
  { name = "Lucas Moeller", email = "opitz.sci@gmail.com" }
]
# 1. Change this from a table to a simple SPDX string
license = "GPL-3.0-only" 
readme = "README.md"
requires-python = ">=3.9"

# 2. Remove the "License :: OSI Approved..." line from here
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch",
    "transformers[torch]",
    "sentence-transformers",
    "datasets",
    "unidecode"
]

[project.urls]
Homepage = "https://github.com/flipz357/XPLAINSIM"

[project.scripts]
xplain-install-amr = "xplain.symbolic.parser_install:install_default_amr_model"

[tool.setuptools]
packages = ["xplain", "xplain.spaceshaping", "xplain.attribution", "xplain.symbolic"]
